--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# Laboratorio CI-CD\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"(Sin pruebas todavía)\" && exit 0",
   },
   "repository": {
     "type": "git",
